k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metrics-app
    app.kubernetes.io/instance: metrics-app-instance
    app.kubernetes.io/name: metrics-app-name
  name: metrics-app-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: metrics-app-instance
    app.kubernetes.io/name: metrics-app-name
  sessionAffinity: None
  type: ClusterIP
