k8s/vcs-trigger.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vcs-trigger-metrics-app-el-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-vcs-trigger-metrics-app-el
    weight: 100
